--- a/views/Toy/AdminAllProduct.hbs
+++ b/views/Toy/AdminAllProduct.hbs
@@ -16,7 +16,7 @@
         <div class="mt-12 mb-4 bg-success d-flex justify-content-between ">
             <ul class="nav justify-content-center">
                 <li class="nav-item h6 m-0 my-3">
-                    <a class="nav-link text-body" href="/Toy">HOME</a>
+                    <a class="nav-link text-body" href="/Toy/Index">HOME</a>
                 </li>
                 <li class="nav-item h6 m-0 my-3">
                     <a class="nav-link text-body" href="/Toy/AdminAllProduct">PRODUCTS</a>
