--- a/views/Toy/AdminAllProduct.hbs
+++ b/views/Toy/AdminAllProduct.hbs
@@ -25,7 +25,7 @@
 
                  <li class="nav-item h6 m-0 my-3">
                     <div class="col md-4">
-                        <form action="/Toy/search" method="post">
+                        <form action="/Toy/searchAdmin" method="post">
                             <input class="form-control" type="search" name="name" placeholder="Search" required>
                         </form>
                     </div>
