--- a/views/Toy/Buy.hbs
+++ b/views/Toy/Buy.hbs
@@ -9,7 +9,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/mystyle.css">   
-    <title>Product page</title>
+    <title>Home</title>
 </head>
 <body>
      <div class="header">
@@ -24,7 +24,7 @@
 
                  <li class="nav-item h6 m-0 my-3">
                      <div class="col md-4">
-                        <form action="/Toy/search" method="post">
+                        <form action="/Toy/searchBuy" method="post">
                             <input class="form-control" type="search" name="name" placeholder="Search" required>
                         </form>
                     </div>
