--- a/views/Toy/HomeAd.hbs
+++ b/views/Toy/HomeAd.hbs
@@ -9,32 +9,35 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/mystyle.css">   
-    <title>Home</title>
+    <title>Home Admin</title>
 </head>
 <body>
      <div class="header">
         <div class="mt-12 mb-4 bg-success d-flex justify-content-between ">
             <ul class="nav justify-content-center">
                 <li class="nav-item h6 m-0 my-3">
-                    <a class="nav-link text-body" href="/Toy/Buy">HOME</a>
+                    <a class="nav-link text-body" href="/Toy/HomeAd">HOME</a>
                 </li>
                 <li class="nav-item h6 m-0 my-3">
-                    <a class="nav-link text-body" href="/Toy/AllProduct">PRODUCTS</a>
+                    <a class="nav-link text-body" href="/Toy/AdminAllProduct">TOY</a>
+                </li>
+                </li>
+                <li class="nav-item h6 m-0 my-3">
+                    <a class="nav-link text-body" href="/Lego/LegoIndex">LEGO</a>
                 </li>
 
-                 <li class="nav-item h6 m-0 my-3">
-                     <div class="col md-4">
-                        <form action="/Toy/searchBuy" method="post">
+                 <li class="nav-item h6 m-0 my-3">                  
+                    <div class="col md-4">
+                        <form action="/Toy/searchAdmin" method="post">
                             <input class="form-control" type="search" name="name" placeholder="Search" required>
                         </form>
                     </div>
-                 
                 </li> 
                 <li class="nav-item h6 m-0 my-3 text-left">
                 <a class="nav-link text-body" href="https://www.facebook.com/iamtruong17052002">About</a>
                 </li>
                 <li class="nav-item h6 m-0 my-3 text-left">
-                    <a class="nav-link text-body" href="/">Login/Logout</a>
+                    <a class="nav-link text-body" href="/">Logout</a>
                 </li>
                 </ul>
         </div>
@@ -56,11 +59,37 @@
                <p class="fw-bold card-text text-primary">{{ price }}$</p>
            
                   <div class="form-group mt-2 mb-2">
-                     <input class="btn btn-danger" type="submit" value="Add to card">
+                    
+                     <input class="btn btn-danger" type="submit" value="Add to card" >
                   </div>
+                 
+            </div>
+         </div>
+         {{/each}}
+          {{#each Lego }}
+         <div class="card col-md-3 mb-3">
+            <th>
+                        <a href="/Lego/Detail/{{_id}}">
+                         <img class="card-img-top mt-3" src="{{ image }}" width="300" height="300">
+                        </a>
+                        </th>  
+            
+            <div class="card-body">
+               <h4 class="card-title text-success">{{ name }}</h4>
+               <p class="fw-bold card-text text-primary">{{ price }}$</p>
+           
+                  <div class="form-group mt-2 mb-2">
+                    
+                     <input class="btn btn-danger" type="submit" value="Add to card" >
+                  </div>
+                 
             </div>
          </div>
          {{/each}}
       </div>
    </div>
+
+
+
+
 </div>
