--- a/views/Toy/HomeCus.hbs
+++ b/views/Toy/HomeCus.hbs
@@ -9,31 +9,35 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/mystyle.css">   
-    <title>Home</title>
+    <title>Home Customer</title>
 </head>
 <body>
      <div class="header">
         <div class="mt-12 mb-4 bg-success d-flex justify-content-between ">
             <ul class="nav justify-content-center">
                 <li class="nav-item h6 m-0 my-3">
-                    <a class="nav-link text-body" href="/Toy/Index">HOME</a>
+                    <a class="nav-link text-body" href="/Toy/HomeCus">HOME</a>
                 </li>
                 <li class="nav-item h6 m-0 my-3">
-                    <a class="nav-link text-body" href="/Toy/AdminAllProduct">PRODUCTS</a>
+                    <a class="nav-link text-body" href="/Toy/AllProduct">TOY</a>
+                </li>
+                <li class="nav-item h6 m-0 my-3">
+                    <a class="nav-link text-body" href="/Lego/LegoCus">LEGO</a>
                 </li>
 
-                 <li class="nav-item h6 m-0 my-3">                  
-                    <div class="col md-4">
-                        <form action="/Toy/searchAdmin" method="post">
+                 <li class="nav-item h6 m-0 my-3">
+                     <div class="col md-4">
+                        <form action="/Toy/searchBuy" method="post">
                             <input class="form-control" type="search" name="name" placeholder="Search" required>
                         </form>
                     </div>
+                 
                 </li> 
                 <li class="nav-item h6 m-0 my-3 text-left">
                 <a class="nav-link text-body" href="https://www.facebook.com/iamtruong17052002">About</a>
                 </li>
                 <li class="nav-item h6 m-0 my-3 text-left">
-                    <a class="nav-link text-body" href="/">Login/Logout</a>
+                    <a class="nav-link text-body" href="/">Logout</a>
                 </li>
                 </ul>
         </div>
@@ -55,10 +59,8 @@
                <p class="fw-bold card-text text-primary">{{ price }}$</p>
            
                   <div class="form-group mt-2 mb-2">
-                    
-                     <input class="btn btn-danger" type="submit" value="Add to card" >
+                     <input class="btn btn-danger" type="submit" value="Add to card">
                   </div>
-                 
             </div>
          </div>
          {{/each}}
