--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="container text-center">
    <h1 class="text text-danger mb-3">ATN STORE SYSTEM</h1>
-   <a class="btn btn-outline-primary" href="/Toy/Index">Admin Site</a>
-   <a class="btn btn-outline-success" href="/Toy/Buy">Customer Site</a>
+   <a class="btn btn-outline-primary" href="/Toy/HomeAd">Admin Site</a>
+   <a class="btn btn-outline-success" href="/Toy/HomeCus">Customer Site</a>
 </div>
 
     <div class="carousel-item active">
