--- a/views/Lego/Add.hbs
+++ b/views/Lego/Add.hbs
@@ -22,6 +22,9 @@
          <label class="fw-bold" for=""> Height</label>
          <input class="form-control" type="number" name="height" required >
       </div>
+      <select name="cars" id="cars">
+
+
     
      
       <div class="form-group mt-2 mb-2">
